--- a/dhiraj/dhiraj.csproj
+++ b/dhiraj/dhiraj.csproj
@@ -210,6 +210,8 @@
     <Content Include="Views\index.cshtml" />
     <Content Include="Views\Bit\index.cshtml" />
     <Content Include="Views\Bit\dhiraj.cshtml" />
+    <Content Include="Views\Edit.cshtml" />
+    <Content Include="Views\Bit\edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
